REGRESSION(r238350) [curl] CertificateInfo.h: error: template specialization requires 'template<>' https://bugs.webkit.org/show_bug.cgi?id=191849

Unreviewed build fix for clang-cl builds.

No new tests because there's no behaviour change.

* platform/network/curl/CertificateInfo.h:
(WTF::Persistence::Coder<WebCore::CertificateInfo>::encode):
(WTF::Persistence::Coder<WebCore::CertificateInfo>::decode):

Canonical link: https://commits.webkit.org/206566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238390 268f45cc-cd09-0410-ab3c-d52691b4dbfc